--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
 </head>
+
 <body>
     <nav class="navbar">
         <div class="max-width">
@@ -24,6 +24,17 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Home section -->
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello, my name is</div>
+                <div class="text-2">Sandile Ndlovu</div>
+                <div class="text-3">And I'm a <span>Web Developer</span></div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
