created and linked js file + linked jquery library

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 </head>
 
 <body>
@@ -35,6 +36,10 @@
             </div>
         </div>
     </section>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem distinctio beatae porro eius, nihil earum nesciunt neque eos illum possimus excepturi quia officiis voluptates similique dolores fugiat magnam dicta est ad, saepe sequi sint. Ab ex enim quis autem culpa commodi rem soluta doloremque adipisci quae molestias, quas, nisi voluptatem optio magnam architecto tempora eveniet numquam cum qui blanditiis omnis sit eius voluptates? In alias incidunt nostrum voluptate commodi voluptatum sunt ratione quas perferendis, nam, nobis numquam et illo nulla recusandae explicabo velit eligendi ullam veniam provident fugiat quia. Cum voluptas sunt est? Aspernatur provident debitis rem. Eos id quaerat quia magnam, perferendis commodi, voluptatibus nihil tempore suscipit numquam laborum nobis odit cumque veritatis repudiandae deleniti ex! Repellat, tempore nihil facilis iusto illum quibusdam dolorum dolor adipisci quo voluptate? Ipsa minus architecto dicta. Quasi quod quisquam harum possimus dicta eaque cupiditate mollitia ipsum vel facere laborum voluptas similique voluptatibus nihil dolorem adipisci, libero tempore ea cumque voluptates earum aut animi ab. Quae nostrum, incidunt voluptas nisi eligendi hic nihil vitae vel minima excepturi a, provident dolor magni minus debitis eaque saepe cumque voluptatibus quam animi enim soluta eveniet magnam quibusdam! Ducimus eos minima soluta error laboriosam iure consequatur corporis corrupti.</p>
+
+    <script src="./js/script.js"></script>
     
 </body>
 </html>
