updated home section responsiveness

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Sandile Ndlovu</div>
                 <div class="text-3">And I'm a <span>Web Developer</span></div>
+                <a href="#">Hire Me</a>
             </div>
         </div>
     </section>
