styled right column and updated html

--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@
         <div class="max-width">
             <h2 class="title">About me</h2>
             <div class="about-content">
-                <div class="column-left">
+                <div class="column left">
                     <img src="./images/profile-1.jpeg" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm Sandile and I'm a <span>Web developer</span></div>
+                    <p>Lorem ipsum dolor um sapiente fugiat accusantium vero quibusdam, vel minima dignissimos qui, expedita temporibus delectus ab quod consequatur sed fuga quidem deserunt aut nulla. Eos beatae, nostrum suscipit, veniam consequatur optio neque magni illo necessitatibus nobis fuga ipsa deserunt earum dignissimos reprehenderit alias nisi atque omnis eligendi minima, voluptatem eaque? Enim, recusandae facilis?</p>
+                    <a href="#">Download CV</a>
                 </div>
             </div>
         </div>
