services section start

--- a/index.html
+++ b/index.html
@@ -57,6 +57,36 @@
         </div>
     </section>
 
+    <!--Services section-->
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">My Services</h2>
+            <div class="services-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Web Disgn</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum magni obcaecati impedit incidunt doloremque esse!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="text">Advertising</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum magni obcaecati impedit incidunt doloremque esse!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">App Design</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum magni obcaecati impedit incidunt doloremque esse!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="./js/script.js"></script>
     
 </body>
