--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
             </div>
         </div>
     </section>
+    
+    <!-- skills section start -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My skills</h2>
+        </div>
+    </section>
 
     <script src="./js/script.js"></script>
     
