--- a/index.html
+++ b/index.html
@@ -96,6 +96,26 @@
                     <div class="text">My creative skills & experiences.</div>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsam iusto quia debitis sit, dolorum qui dolor fuga quibusdam placeat! Dolor vitae nulla, aliquid unde nobis, accusantium consequuntur sit sed iure veniam sequi reprehenderit, mollitia a molestiae nostrum vero odio temporibus! Nesciunt unde placeat dolor qui nulla doloremque? Doloribus soluta culpa, repellendus modi praesentium ex explicabo repudiandae tenetur ipsum corrupti.</p>
                 </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>80%</span>
+                        </div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>60%</span>
+                        </div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>40%</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
