skills section right side styling

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsam iusto quia debitis sit, dolorum qui dolor fuga quibusdam placeat! Dolor vitae nulla, aliquid unde nobis, accusantium consequuntur sit sed iure veniam sequi reprehenderit, mollitia a molestiae nostrum vero odio temporibus! Nesciunt unde placeat dolor qui nulla doloremque? Doloribus soluta culpa, repellendus modi praesentium ex explicabo repudiandae tenetur ipsum corrupti.</p>
+                    <a href="#">Read more</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
