--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsam iusto quia debitis sit, dolorum qui dolor fuga quibusdam placeat! Dolor vitae nulla, aliquid unde nobis, accusantium consequuntur sit sed iure veniam sequi reprehenderit, mollitia a molestiae nostrum vero odio temporibus! Nesciunt unde placeat dolor qui nulla doloremque? Doloribus soluta culpa, repellendus modi praesentium ex explicabo repudiandae tenetur ipsum corrupti.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -103,18 +103,35 @@
                             <span>HTML</span>
                             <span>80%</span>
                         </div>
+                        <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
                             <span>60%</span>
                         </div>
+                        <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>40%</span>
+                            <span>50%</span>
                         </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Python</span>
+                            <span>1%</span>
+                        </div>
+                        <div class="line python"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Java</span>
+                            <span>10%</span>
+                        </div>
+                        <div class="line java"></div>
                     </div>
                 </div>
             </div>
