updated skills section

--- a/index.html
+++ b/index.html
@@ -130,8 +130,15 @@
                     </div>
                     <div class="bars">
                         <div class="info">
+                            <span>WordPress</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="line word-press"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
                             <span>Microsoft Office</span>
-                            <span>70%</span>
+                            <span>75%</span>
                         </div>
                         <div class="line ms"></div>
                     </div>
