--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Sandile and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                    <p>Highly motivated, self-starting developer seeking to launch a career building web applications and services. Familiar with development and deployment process for various web-based technologies.</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
@@ -74,21 +74,21 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Development</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Design, build and maintain websites ensuring that sites meet user expections by ensuring they look good, run smoothly and offer easy access points.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Photo/Video editing</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>I edit Photo and Video visuals using different technologies and techniques to make them more appealing.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Admin Assistant</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Assist with the day-to-day operations of an organization by doing tasks such as filing paperwork, answering phone calls, preparing documents for meetings, and managing the calendar of their supervisors.</p>
                     </div>
                 </div>
                </div>
@@ -117,7 +117,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <span>65%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
