--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Sandile and I'm a <span class="typing-2"></span></div>
-                    <p>Highly motivated, self-starting developer seeking to launch a career building web applications and services. Familiar with development and deployment process for various web-based technologies.</p>
+                    <p>Highly motivated, self-starting developer based in Johannesburg, South Africa. Lately, I've discovererd my passion for the world of web development and the beauty behind building useful websites. I am Seeking a junior dev position as I recently learned how to code by myself to finally launch a career building web applications and services amongst professionals.</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
@@ -103,7 +103,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <p>As a self taught developer, I have spent countless hours learning through YouTube tutorials and online courses such as freeCodeCamp and The Odin Project. I am familiar with the development and deployment process for various web-based technologies. I am eager to tackle web development/design challenges to achieve lasting impacts on user experience</p>
                     <a href="#contact">Hire me</a>
                 </div>
                 <div class="column right">
@@ -127,6 +127,13 @@
                             <span>40%</span>
                         </div>
                         <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Git version control</span>
+                            <span>55%</span>
+                        </div>
+                        <div class="line git"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
