--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
                         
                         <div class="button-area">
                             <input type="hidden" name="_captcha" value="false">
+                            <input type="hidden" name="_next" value="">
                             <button type="submit">Send message</button>
                         </div>
                     </form>
