--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         
                         <div class="button-area">
                             <input type="hidden" name="_captcha" value="false">
-                            <input type="hidden" name="_next" value="">
+                            <input type="hidden" name="_next" value="https://sandile05.github.io/personal-portfolio/pages/thank-you.html">
                             <button type="submit">Send message</button>
                         </div>
                     </form>
