--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanks</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    Thank you!
+    <div class="card">
+        <div class="top">
+            <i class='bx bx-happy-heart-eyes'></i>
+        </div>
+        <div class="bottom">
+            <h1>Message Sent!</h1>
+            <button><a href="../index.html">Go Back</a></button>
+        </div>
+    </div>
 </body>
 </html>
