--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanks</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/thank-you-styles.css">
     <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    <div class="card">
+    <div class="thank-you-card-container">
         <div class="top">
             <i class='bx bx-happy-heart-eyes'></i>
         </div>
