thank you button plus tick

--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -10,14 +10,11 @@
   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    <div class="thank-you-card-container">
-        <div class="top">
-            <i class='bx bx-happy-heart-eyes'></i>
-        </div>
-        <div class="bottom">
-            <h1>Message Sent!</h1>
-            <button><a href="../index.html">Go Back</a></button>
-        </div>
+    <div class="card">
+        <img src="../images/tick.png" alt="">
+        <h2>Thank You!</h2>
+        <p>Your Message has been sent successfully.</p>
+        <button><a href="../index.html">Go Back</a></button>
     </div>
 </body>
 </html>
