added social icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 
 <body>
@@ -44,6 +44,11 @@
                 <div class="text-2">Sandile Ndlovu</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#contact">Hire me</a>
+                <div class="links">
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
             </div>
         </div>
     </section>
@@ -58,7 +63,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Sandile and I'm a <span class="typing-2"></span></div>
-                    <p>Highly motivated, self-starting developer based in Johannesburg, South Africa. Lately, I've discovererd my passion for the world of web development and the beauty behind building useful websites. I am Seeking a junior dev position as I recently learned how to code by myself to finally launch a career building web applications and services amongst professionals.</p>
+                    <p>Highly motivated, self-starting developer based in Johannesburg, South Africa. I've discovererd my passion for the world of web development and the beauty behind building useful websites. I am Seeking a junior dev position as I recently learned how to code by myself to finally launch a career building web applications and services amongst other professionals.</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
