scroll reveal animation

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
         <span>Created By <a href="#">Sandile</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
     </footer>
 
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
